memberlist and get product
